<resources>
    <string name="app_name">Lab1</string>
    <string name="Title">中山大学学生信息管理系统</string>
    <string name="string_id">学号:</string>
    <string name="please_id">请输入学号</string>
    <string name="please_password">请输入密码</string>
    <string name="string_password">密码:</string>
    <string name="student">学生</string>
    <string name="teacher">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
</resources>
