<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bob.lab1.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/image_sysu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="20dp"
        android:src="@drawable/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    
    <TextView
        android:id="@+id/string_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/string_id"
        app:layout_constraintTop_toBottomOf="@+id/image_sysu"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/image_sysu"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/string_id"
        android:inputType="number"
        android:hint="@string/please_id"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/string_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/string_password"
        app:layout_constraintTop_toBottomOf="@+id/string_id"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintHorizontal_chainStyle="spread" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/string_password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/please_password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <RadioGroup
        android:id="@+id/choose_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        android:layout_marginTop="20dp"
        >
        
        <RadioButton
            android:id="@+id/student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:checked="true"
            android:text="@string/student"/>
        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/student"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/teacher"/>

    </RadioGroup>
    
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@drawable/button_bg"
        android:textColor="#000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/choose_mode"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:textColor="#000000"
        android:background="@drawable/button_bg"
        app:layout_constraintLeft_toRightOf="@+id/login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_mode"
        android:layout_marginTop="20dp"
        />
</android.support.constraint.ConstraintLayout>
